# lri-cpp

./: .gitignore  CMakeLists.txt  README.md  stitch.py
.github/workflows/: cmake-multi-platform.yml
src/: debayer.cpp  debayer.h  error.h  image.cpp  image.h  main.cpp  picoproto.cpp  picoproto.h  utils.cpp  utils.h
src/protos/: camera_id.h  camera_module.h  color_calibration.h  dead_pixel_map.h  device_temp.h  distortion.h  face_data.h  flash_calibration.h  geometric_calibration.h  gps_data.h  hot_pixel_map.h  hw_info.h  imu_data.h  lightheader.h  matrix3x3f.h  matrix4x4f.h  mirror_system.h  point2d.h  point2f.h  point2i.h  point3f.h  proximity_sensors.h  range2f.h  rectanglei.h  sensor_characterization.h  sensor_type.h  time_stamp.h  tof_calibration.h  utils.h  view_preferences.h  vignetting_characterization.h
